hphp/hack/test/typecheck/coeffects/varray_darray_const_ctx_bad.php.exp
File "varray_darray_const_ctx_bad.php", line 5, characters 47-49:
No type constant `bad` in `vec` (Typing[4090])
  File "hackarray.hhi", line 28, characters 22-24:
  Declaration of `vec` is here
File "varray_darray_const_ctx_bad.php", line 7, characters 52-54:
No type constant `bad` in `dict` (Typing[4090])
  File "hackarray.hhi", line 24, characters 22-25:
  Declaration of `dict` is here
File "varray_darray_const_ctx_bad.php", line 9, characters 67-69:
You are trying to access the type constant `bad` but this is a vec_or_dict (Typing[4062])
  File "varray_darray_const_ctx_bad.php", line 9, characters 37-57:
  Definition is here
